# shared/models/common.go
@@ -4,7 +4,6 @@ import (
 	"time"
 
 	"github.com/dgrijalva/jwt-go"
-	// "github.com/google/uuid"
 )
 
 type Response struct {
@@ -25,10 +24,11 @@ type Pagination struct {
 }
 
 type Login struct {
-	UserName string `json:"username" example:"john_doe"`
-	Password string `json:"password" example:"password123"`
-}
+	UserName string `json:"username" validate:"required" example:"john_doe"`
+	Password string `json:"password" validate:"required" example:"password123"`
+} //@name LoginRequest
 
+// @swagger:model LoginResponse
 type LoginResponse struct {
 	UserDetails        UserResponse `json:"user_details"`
 	AuthorizationToken string       `json:"token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"`
@@ -39,11 +39,3 @@ type JWTClaims struct {
 	UserDetails any `json:"user_details"`
 	jwt.StandardClaims
 }
-
-// type baseModel struct {
-// 	ID        uuid.UUID  `gorm:"type:uuid;default:uuid_generate_v4();primaryKey" json:"id"`
-// 	CreatedAt time.Time  `json:"created_at"`
-// 	UpdatedAt time.Time  `json:"updated_at"`
-// 	IsDeleted bool       `gorm:"default:false" json:"is_deleted"`
-// 	DeletedAt *time.Time `json:"deleted_at"`
-// }
